# tigris

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
scripts/: gen_fixtures.py
src/tigris/: __init__.py  fixtures.py  utils.py
src/tigris/analysis/: __init__.py  findings.py  lifetime.py  memory.py  partition_spatial.py  partition_temporal.py
src/tigris/cli/: __init__.py  analyze.py  codegen.py  compile.py  plan.py  simulate.py
src/tigris/emitters/: __init__.py  codegen.py  yaml.py
src/tigris/emitters/binary/: __init__.py  defs.py  reader.py  writer.py
src/tigris/graph/: __init__.py  ir.py
src/tigris/loaders/: __init__.py
src/tigris/loaders/onnx/: __init__.py  loader.py  normalize.py
tests/: conftest.py  test_bn_fold.py  test_chains.py  test_codegen.py  test_compression.py  test_emitter_binary.py  test_emitter_yaml.py  test_fused_activation.py  test_lifetime.py  test_loader.py  test_memory.py  test_normalize_qdq.py  test_partition.py  test_plan_contract.py  test_tiling.py  test_weights.py
