[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tigris-ml"
dynamic = ["version"]
description = "TiGrIS - Tiled Graph Inference Scheduler for edge ML deployment"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "RAWS Labs" },
]
keywords = ["onnx", "edge-ml", "embedded", "tinyml", "inference", "microcontroller"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "onnx>=1.15",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "onnxruntime>=1.17",
]

[project.urls]
Homepage = "https://github.com/raws-labs/tigris"
Repository = "https://github.com/raws-labs/tigris"
Issues = "https://github.com/raws-labs/tigris/issues"

[project.scripts]
tigris = "tigris.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/tigris/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
